Profile mostly working!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,18 +25,16 @@
             android:name=".view.main.SignInActivity"
             android:label="signInActivity"
             android:theme="@style/AppTheme.NoActionBar">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.SIGNIN" />-->
-<!--            </intent-filter>-->
         </activity>
         <activity
             android:name=".view.main.signUp.UserSettingsActivity"
             android:label="userSettingsActivity"
             android:theme="@style/AppTheme.NoActionBar">
-<!--            <intent-filter>-->
-<!--                <action android:name="andro"-->
-<!--            </intent-filter>-->
-
+        </activity>
+        <activity
+            android:name=".view.main.profile.ProfileActivity"
+            android:label="profileActivity"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
      </application>
 
