--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation 'org.jetbrains:annotations-java5:15.0'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
 
 configurations {
