Added SearchActivity and fixed minor things

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,8 +40,11 @@
             android:name=".view.main.status.StatusActivity"
             android:label="statusActivity"
             android:theme="@style/AppTheme.Modal">
-
-
+        </activity>
+        <activity
+            android:name=".view.main.search.SearchActivity"
+            android:label="searchActivity"
+            android:theme="@style/AppTheme.Modal">
         </activity>
      </application>
 
