--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java-library'
+apply plugin: 'com.github.johnrengelman.shadow'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
