Fixed user search, search follow relationship, and log out

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
     implementation project(path: ':shared')
+    androidTestImplementation 'junit:junit:4.12'
 }
 
 configurations {
