--- a/server/build.gradle
+++ b/server/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     implementation 'com.amazonaws:aws-java-sdk-core:1.11.547'
     implementation 'com.amazonaws:aws-java-sdk-dynamodb:1.11.547'
     implementation 'com.amazonaws:aws-java-sdk-sqs:1.11.547'
+    implementation 'com.amazonaws:aws-lambda-java-events:2.2.5'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.2'
     testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
 }
